<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/rlLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        android:layout_alignParentTop="true">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEasy"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/easy"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@+id/btnNormal"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            app:backgroundTint="@color/white">
        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNormal"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/normal"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            app:backgroundTint="@color/white">
        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnHard"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/hard"
            android:layout_toEndOf="@+id/btnNormal"
            android:layout_marginStart="20dp"
            android:textColor="@color/black"
            app:backgroundTint="@color/white">
        </com.google.android.material.button.MaterialButton>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rlLayoutMultiOrSinglePlayer"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="20dp"
        android:visibility="visible"
        android:layout_alignParentTop="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSinglePlayer"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/single_player"
            android:textColor="@color/black"
            app:backgroundTint="@color/white">

        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTwoPlayer"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnSinglePlayer"
            android:text="@string/multi_player"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            app:backgroundTint="@color/white">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtTextPlayerName1"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@+id/btnTwoPlayer"
            android:layout_centerInParent="true"
            android:layout_marginTop="15sp"
            android:background="@drawable/rounded"
            android:hint="𝟙.𝕆𝕪𝕦𝕟𝕔𝕦"
            android:textAlignment="center"
            android:visibility="invisible" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtTextPlayerName2"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@+id/edtTextPlayerName1"
            android:layout_centerInParent="true"
            android:hint="𝟚.𝕆𝕪𝕦𝕟𝕔𝕦"
            android:visibility="invisible"
            android:textAlignment="center"
            android:background="@drawable/rounded"
            android:layout_marginTop="15sp"/>
    </RelativeLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_play"
        app:borderWidth="0dp">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>
</RelativeLayout>